--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pt.unl.fct.di.scc</groupId>
-    <artifactId>scc2223-lab5</artifactId>
+    <artifactId>scc2324-functions</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -24,11 +24,6 @@
             <artifactId>azure-functions-java-library</artifactId>
             <version>2.1.0</version>
         </dependency>
-		<dependency>
-			<groupId>com.azure</groupId>
-			<artifactId>azure-storage-blob</artifactId>
-			<version>12.19.1</version>
-		</dependency>
 <dependency>
 	<groupId>org.apache.commons</groupId>
 	<artifactId>commons-lang3</artifactId>
@@ -155,6 +150,39 @@
                     </filesets>
                 </configuration>
             </plugin>
+            <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-shade-plugin</artifactId>
+    <version>3.0.0</version>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>shade</goal>
+            </goals>
+            <configuration>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <manifestEntries>
+                            <Main-Class>scc.serverless.TimerFunction</Main-Class>
+                        </manifestEntries>
+                    </transformer>
+                </transformers>
+                <filters>
+                    <filter>
+                        <artifact>*:*</artifact>
+                        <excludes>
+                            <exclude>META-INF/*.SF</exclude>
+                            <exclude>META-INF/*.DSA</exclude>
+                            <exclude>META-INF/*.RSA</exclude>
+                        </excludes>
+                    </filter>
+                </filters>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+
         </plugins>
     </build>
 </project>
