Auto stash before merge of "main" and "origin/main"

--- a/tests/test-listing.yml
+++ b/tests/test-listing.yml
@@ -1,5 +1,5 @@
 config:
-  target: 'https://scc-backend-60353.azurewebsites.net/rest/house'
+  target: 'http://20.54.12.42:8080/scc2324-lab1-1.0/rest/house'
   http:
     timeout: 60
   plugins:
