--- a/tests/load-data.yml
+++ b/tests/load-data.yml
@@ -1,12 +1,11 @@
 config:
-  target: 'https://scc-backend-60353.azurewebsites.net/rest/media'
+  target: 'http://20.54.12.42:8080/scc2324-lab1-1.0/rest/media'
   plugins:
     metrics-by-endpoint:
       useOnlyRequestNames: true
   processor: "./test-utils.js"
   variables:
     numImages: 50
-
   phases:
   - name: "Create users"    # Create users
     duration: 1
